@startuml CD
skinparam classAttributeIconSize 0

abstract Area {
  - area: String
  - code: int
  - m49: String
}

abstract Item {
  - code: int
  - cpc: String
  - item: String
}

abstract Element {
  - code: int
  - element: String
}

class ProductionData {
  - year: int
}

class Value {
  - value: double
  - unit: String
  - flag: String
  - flagDescription: String

}

class Container {

}

Container "1" o-- "1..*" Area
Area "1" o-- "1..*" Item
Item "1" o-- "1..*" Element
Element "1" o-- "1..*" ProductionData
ProductionData "1" o-- "1" Value

class AreaByCode {}
class AreaByName {}
class AreaByM49 {}

class ItemByCode {}
class ItemByName {}
class ItemByCPC {}

class ElementByCode {}
class ElementByName {}

Area <|-- AreaByCode
Area <|-- AreaByName
Area <|-- AreaByM49

Item <|-- ItemByCode
Item <|-- ItemByName
Item <|-- ItemByCPC

Element <|-- ElementByCode
Element <|-- ElementByName

@enduml
